--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -2,5 +2,5 @@
 <resources>
     <string name="appwidget_test">Play</string>
     <string name="add_widget">Add widget</string>
-    <string name="add_widget_description">Music Player</string>
+    <string name="app_widget_description">Music Player</string>
 </resources>
